[package]
name = "shmemq"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
serde = { package = "serde", version = "1.0", features = [ "derive" ], optional = true }

[dev-dependencies]
rand = "0.9"

[features]
default = [ ]
serde = [ "dep:serde" ]

[profile.test]
opt-level = 3
codegen-units = 1
lto = true
